# mikolajki-sfml

./: CMakeLists.txt  main.cpp
